--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build"
+},
   "dependencies": {
     "json-server": "^0.17.4"
   }
