--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "json-server-api",
+  "name": "my-json-api",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build"
-},
+    "start": "json-server --watch db.json --port 9000"
+  },
   "dependencies": {
     "json-server": "^0.17.4"
   }
